fix - ensure text remains visible with swap

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,13 @@
 @font-face {
   font-family: "Aboreto";
   src: url("../public/static/fonts/Aboreto-Regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   src: url("../public/static/fonts/Poppins-Regular.ttf");
+  font-display: swap;
 }
 
 :root {
